--- a/Share Beauty App/Views/LX/LXEfficacyPenetrationView.xib
+++ b/Share Beauty App/Views/LX/LXEfficacyPenetrationView.xib
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -20,9 +20,8 @@
             <rect key="frame" x="0.0" y="0.0" width="960" height="700"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view tag="100" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="csz-9f-JUy">
-                    <rect key="frame" x="0.0" y="0.0" width="959" height="984"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                <view clipsSubviews="YES" tag="100" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="csz-9f-JUy">
+                    <rect key="frame" x="0.0" y="0.0" width="960" height="700"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="lx_penetration.png" translatesAutoresizingMaskIntoConstraints="NO" id="Dk0-wz-f33">
                             <rect key="frame" x="0.0" y="0.0" width="960" height="700"/>
@@ -234,9 +233,12 @@ Enmei
                             <fontDescription key="fontDescription" name="ACaslonPro-Regular" family="Adobe Caslon Pro" pointSize="14"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" tag="22" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5yf-Wa-OLU">
-                            <rect key="frame" x="637" y="616" width="266" height="44"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <label opaque="NO" userInteractionEnabled="NO" tag="22" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="right" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5yf-Wa-OLU">
+                            <rect key="frame" x="638" y="616" width="266" height="44"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="LyO-X8-DtU"/>
+                                <constraint firstAttribute="width" constant="266" id="bMx-1K-CwJ"/>
+                            </constraints>
                             <string key="text">Data from experiment comparing ingredients 
 (Not a comparison of products)</string>
                             <fontDescription key="fontDescription" name="ACaslonPro-Regular" family="Adobe Caslon Pro" pointSize="14"/>
@@ -245,9 +247,19 @@ Enmei
                         </label>
                     </subviews>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="5yf-Wa-OLU" secondAttribute="bottom" constant="40" id="VUx-Lc-fX7"/>
+                        <constraint firstAttribute="trailing" secondItem="5yf-Wa-OLU" secondAttribute="trailing" constant="56" id="uM5-n1-Iob"/>
+                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="csz-9f-JUy" secondAttribute="bottom" id="Gms-Io-9aX"/>
+                <constraint firstItem="csz-9f-JUy" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="cIM-xb-FcR"/>
+                <constraint firstItem="csz-9f-JUy" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ott-x1-czC"/>
+                <constraint firstAttribute="trailing" secondItem="csz-9f-JUy" secondAttribute="trailing" id="vwC-4q-hnF"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="33" y="143"/>
         </view>
