--- a/Share Beauty App/Base.lproj/LXProductViewController.storyboard
+++ b/Share Beauty App/Base.lproj/LXProductViewController.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -15,10 +14,10 @@
         </array>
     </customFonts>
     <scenes>
-        <!--Luxury Product View Controller-->
+        <!--Product View Controller-->
         <scene sceneID="a2T-yI-CPx">
             <objects>
-                <viewController storyboardIdentifier="LuxuryProductViewController" id="T4m-bh-eTl" customClass="LuxuryProductViewController" customModule="Share_Beauty_App" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LXProductViewController" id="T4m-bh-eTl" customClass="LXProductViewController" customModule="Share_Beauty_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="0Dc-Ys-UgS"/>
                         <viewControllerLayoutGuide type="bottom" id="ccM-iA-GLD"/>
@@ -28,13 +27,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" maximumZoomScale="3" translatesAutoresizingMaskIntoConstraints="NO" id="cPZ-HZ-YPi">
-                                <rect key="frame" x="0.0" y="22" width="1024" height="746"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PSx-Hb-PSG">
-                                        <rect key="frame" x="0.0" y="-10" width="1024" height="736"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                                         <subviews>
                                             <view tag="10" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WfU-sj-2Ff">
-                                                <rect key="frame" x="0.0" y="40" width="1024" height="350"/>
+                                                <rect key="frame" x="0.0" y="-10" width="1024" height="350"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" tag="60" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Beauty Longevity System" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vHD-Wt-eNd">
@@ -246,7 +245,7 @@
                                                 <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="0.29999999999999999" colorSpace="calibratedRGB"/>
                                             </view>
                                             <view tag="11" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="q9l-Vy-AGe">
-                                                <rect key="frame" x="0.0" y="395" width="645" height="310"/>
+                                                <rect key="frame" x="0.0" y="345" width="645" height="310"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" tag="61" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Beauty Longevity System" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zlK-dM-1Ll">
@@ -410,7 +409,7 @@
                                                 <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="0.30021551724137929" colorSpace="calibratedRGB"/>
                                             </view>
                                             <view tag="12" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sL4-r4-z5x">
-                                                <rect key="frame" x="650" y="395" width="380" height="310"/>
+                                                <rect key="frame" x="650" y="345" width="380" height="310"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" tag="62" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Beauty Longevity System" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YMG-CO-v3o">
@@ -488,53 +487,29 @@
                                                 <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="0.29916487068965519" colorSpace="calibratedRGB"/>
                                             </view>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="736" id="LJr-eC-Ylh"/>
-                                        </constraints>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="PSx-Hb-PSG" firstAttribute="width" secondItem="cPZ-HZ-YPi" secondAttribute="width" id="Ycm-5v-nFl"/>
-                                    <constraint firstItem="PSx-Hb-PSG" firstAttribute="top" secondItem="cPZ-HZ-YPi" secondAttribute="top" constant="-10" id="g9g-Bb-EOv"/>
+                                    <constraint firstItem="PSx-Hb-PSG" firstAttribute="centerX" secondItem="cPZ-HZ-YPi" secondAttribute="centerX" id="JlQ-hu-h7h"/>
+                                    <constraint firstItem="PSx-Hb-PSG" firstAttribute="top" secondItem="cPZ-HZ-YPi" secondAttribute="top" id="Vtv-uv-q93"/>
                                     <constraint firstItem="PSx-Hb-PSG" firstAttribute="leading" secondItem="cPZ-HZ-YPi" secondAttribute="leading" id="nre-A9-77r"/>
                                     <constraint firstAttribute="bottom" secondItem="PSx-Hb-PSG" secondAttribute="bottom" id="sub-0A-3Ti"/>
+                                    <constraint firstItem="PSx-Hb-PSG" firstAttribute="centerY" secondItem="cPZ-HZ-YPi" secondAttribute="centerY" id="u3n-3s-BPc"/>
                                     <constraint firstAttribute="trailing" secondItem="PSx-Hb-PSG" secondAttribute="trailing" id="xgc-49-alw"/>
                                 </constraints>
                             </scrollView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cPx-d8-lS3" customClass="LXHeaderView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="22" width="1024" height="50"/>
-                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="xO7-Kn-nRp"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZRJ-3D-nAq" customClass="LXNavigationView" customModule="Share_Beauty_App" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="72" width="1024" height="44"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="QEg-6a-sKy"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="cPZ-HZ-YPi" secondAttribute="trailing" id="7Hf-vS-yXc"/>
                             <constraint firstItem="ccM-iA-GLD" firstAttribute="top" secondItem="cPZ-HZ-YPi" secondAttribute="bottom" id="9hR-jY-jLm"/>
-                            <constraint firstItem="ZRJ-3D-nAq" firstAttribute="leading" secondItem="nfh-Xa-TPF" secondAttribute="leading" id="D95-Ua-eD4"/>
-                            <constraint firstItem="cPZ-HZ-YPi" firstAttribute="top" secondItem="nfh-Xa-TPF" secondAttribute="topMargin" constant="22" id="NYr-TU-jab"/>
-                            <constraint firstItem="ZRJ-3D-nAq" firstAttribute="top" secondItem="cPx-d8-lS3" secondAttribute="bottom" id="PCq-r8-r1s"/>
+                            <constraint firstItem="cPZ-HZ-YPi" firstAttribute="top" secondItem="nfh-Xa-TPF" secondAttribute="top" id="OgR-cM-joS"/>
                             <constraint firstItem="cPZ-HZ-YPi" firstAttribute="leading" secondItem="nfh-Xa-TPF" secondAttribute="leading" id="R5P-Bp-fuN"/>
-                            <constraint firstAttribute="trailing" secondItem="ZRJ-3D-nAq" secondAttribute="trailing" id="R78-OX-dCe"/>
-                            <constraint firstItem="cPx-d8-lS3" firstAttribute="top" secondItem="0Dc-Ys-UgS" secondAttribute="bottom" constant="2" id="UCA-ck-xAM"/>
-                            <constraint firstAttribute="trailing" secondItem="cPx-d8-lS3" secondAttribute="trailing" id="c6H-Ga-qUR"/>
-                            <constraint firstItem="cPx-d8-lS3" firstAttribute="leading" secondItem="nfh-Xa-TPF" secondAttribute="leading" id="mbI-Vr-VhR"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="mBABtn" destination="TLe-Uf-2Uo" id="QcP-88-EBg"/>
-                        <outlet property="mHeaderView" destination="cPx-d8-lS3" id="0OD-nU-Rfj"/>
-                        <outlet property="mNavigationView" destination="ZRJ-3D-nAq" id="G0z-86-kKy"/>
                         <outlet property="mScrollV" destination="cPZ-HZ-YPi" id="ymr-y3-6pJ"/>
                         <outlet property="mVContent" destination="PSx-Hb-PSG" id="zHv-Bb-bqX"/>
                     </connections>
