--- a/Share Beauty App/Views/LX/LXAngelicaView.xib
+++ b/Share Beauty App/Views/LX/LXAngelicaView.xib
@@ -30,7 +30,7 @@
                     <color key="textColor" red="0.60784313729999995" green="0.53725490200000003" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="lx_angelica.png" translatesAutoresizingMaskIntoConstraints="NO" id="8HA-jF-HTA">
+                <imageView userInteractionEnabled="NO" tag="60" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="lx_angelica.png" translatesAutoresizingMaskIntoConstraints="NO" id="8HA-jF-HTA">
                     <rect key="frame" x="175" y="295" width="365" height="240"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
