--- a/Share Beauty App/Views/LX/LXEfficacyPenetrationView.xib
+++ b/Share Beauty App/Views/LX/LXEfficacyPenetrationView.xib
@@ -23,7 +23,7 @@
                 <view clipsSubviews="YES" tag="100" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="csz-9f-JUy">
                     <rect key="frame" x="0.0" y="0.0" width="960" height="700"/>
                     <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="lx_penetration.png" translatesAutoresizingMaskIntoConstraints="NO" id="Dk0-wz-f33">
+                        <imageView userInteractionEnabled="NO" tag="60" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="lx_penetration.png" translatesAutoresizingMaskIntoConstraints="NO" id="Dk0-wz-f33">
                             <rect key="frame" x="0.0" y="0.0" width="960" height="700"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         </imageView>
