--- a/Share Beauty App/Views/LX/LXProductHowToUseView.xib
+++ b/Share Beauty App/Views/LX/LXProductHowToUseView.xib
@@ -26,7 +26,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W6y-sS-uFz">
                             <rect key="frame" x="66" y="41" width="829" height="619"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lx_howtouse_523.png" translatesAutoresizingMaskIntoConstraints="NO" id="4rc-i6-ksn">
+                                <imageView userInteractionEnabled="NO" tag="31" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lx_howtouse_523.png" translatesAutoresizingMaskIntoConstraints="NO" id="4rc-i6-ksn">
                                     <rect key="frame" x="0.0" y="0.0" width="829" height="619"/>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Massages &amp; Exercises" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hv5-bb-bd5">
@@ -125,7 +125,7 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cKM-47-mK8">
                             <rect key="frame" x="66" y="41" width="829" height="618"/>
                             <subviews>
-                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lx_howtouse_522.png" translatesAutoresizingMaskIntoConstraints="NO" id="Dk0-wz-f33">
+                                <imageView userInteractionEnabled="NO" tag="30" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="lx_howtouse_522.png" translatesAutoresizingMaskIntoConstraints="NO" id="Dk0-wz-f33">
                                     <rect key="frame" x="0.0" y="0.0" width="829" height="618"/>
                                 </imageView>
                                 <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Massages &amp; Exercises" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fKB-kx-pdq">
