--- a/Share Beauty App/Views/LX/LXGraphView.xib
+++ b/Share Beauty App/Views/LX/LXGraphView.xib
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="450" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8OG-AV-9Fq">
+                <imageView userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8OG-AV-9Fq">
                     <rect key="frame" x="0.0" y="13" width="170" height="187"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
